[project]
name = "my-pdm-project"
version = "0.1.0"
description = "A project using specific versions of requests and numpy"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
dependencies = [
    "requests==2.25.1",
    "numpy==1.20.3",
]
requires-python = ">=3.8,<3.10"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
